[FEAT] can create user with swagger
